# Windscribe

./: .gitignore  CMakeLists.txt  README.txt  config.h.in  generate.bat  main.cpp
Algorithms/: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt
DnsResolver/: CMakeLists.txt  DnsResolver.cpp  DnsResolver.hpp
